Test: LottoTest 추가 로또 번호에 문자가 있으면 예외 처리